--- a/style.css
+++ b/style.css
@@ -292,6 +292,7 @@ body {
   text-decoration-thickness: 8px;
   text-align: center;
   margin-bottom: 100px;
+  margin-top: 100px;
 }
 
 .contacto-texto{
